# Test_task

./: CMakeLists.txt  client.cpp  server.cpp
libs/: CMakeLists.txt  TCP_server.cpp  TCP_server.h  UDP_server.cpp  UDP_server.h  process.cpp  process.h
