cmake_minimum_required (VERSION 2.6) 
project(TCPlibrary)
set(SOURCES TCP_server.cpp process.cpp)
set(HEADERS TCP_server.h  process.h)
set(SOURCES_UDP UDP_server.cpp process.cpp)
set(HEADERS_UDP UDP_server.h process.h)
add_library(TCP_server ${SOURCES} ${HEADERS})
add_library(UDP_server ${SOURCES_UDP} ${HEADERS_UDP})
target_include_directories(TCP_server PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(UDP_server PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})